--- a/app.css
+++ b/app.css
@@ -87,6 +87,11 @@ body {
 }
 
 /* Cinza */
+.status-vacation {
+  background-color: #6f42c1;
+}
+
+/* Roxo */
 
 /* Add Sticker Button */
 .add-sticker-container {
