--- a/app.css
+++ b/app.css
@@ -91,6 +91,12 @@ body {
   background-color: #6f42c1;
 }
 
+.status-break {
+  background-color: #d63384;
+}
+
+/* Pink */
+
 /* Roxo */
 
 /* Add Sticker Button */
