--- a/app.css
+++ b/app.css
@@ -10,9 +10,9 @@ body {
   background-color: #ffffff;
   color: #212529;
   background-image: url('bg-glasnevin.png');
-  background-position: bottom center;
+  background-position: center bottom;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% auto;
   background-attachment: fixed;
 }
 
