--- a/app.css
+++ b/app.css
@@ -109,6 +109,10 @@ body {
 
 /* Roxo */
 
+.status-offline {
+  background-color: #000000;
+}
+
 /* Add Sticker Button */
 .add-sticker-container {
   margin-top: auto;
@@ -826,7 +830,7 @@ body {
     z-index: 1000;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
   }
 
   .sidebar.open {
@@ -840,7 +844,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 999;
     display: none;
   }
